@@ -1228,7 +1228,17 @@ class FolderController extends \GO\Base\Controller\AbstractModelController {
 			throw new \Exception(sprintf(\GO::t('filenameExists','files'), $archiveFile->stripFileStoragePath()));
 		
 		$sourceObjects = array();
-		for($i=0;$i<count($sources);$i++){			
+		for($i=0;$i<count($sources);$i++){
+
+			$file = \GO\Files\Model\File::model()->findByPath($sources[$i]);
+			if(!$file) {
+				throw new NotFound();
+			}
+
+			if(!$file->getPermissionLevel()) {
+				throw new AccessDenied();
+			}
+
 			$path = \GO::config()->file_storage_path.$sources[$i];			
 			$sourceObjects[]=\GO\Base\Fs\Base::createFromPath($path);
 		}
@@ -1273,6 +1283,16 @@ class FolderController extends \GO\Base\Controller\AbstractModelController {
 		$maxFilesize = GO::config()->zip_max_file_size;
 		
 		for($i=0;$i<count($sources);$i++){
+
+			$file = \GO\Files\Model\File::model()->findByPath($sources[$i]);
+			if(!$file) {
+				throw new NotFound();
+			}
+
+			if(!$file->getPermissionLevel()) {
+				throw new AccessDenied();
+			}
+
 			$path = \GO::config()->file_storage_path.$sources[$i];
 			
 			$sourceFile = \GO\Base\Fs\Base::createFromPath($path);
