@@ -1,3 +1,5 @@
+- Files: Added permission checks to compress functions
+
 11-06-2020 6.2.126
 - Calendar: Fix for "No participant found for this event"
 
